fixed: Solved the overflow issue of inputfield

--- a/src/components/SingleTodo/style.css
+++ b/src/components/SingleTodo/style.css
@@ -15,12 +15,12 @@
 }
 
 .todoTask {
-  width: 100%;
+  width: calc(100% - 105px - 20px);
   flex: 1;
-  /* background-color: turquoise; */
   padding: 5px;
   border: none;
   font-size: 20px;
+  overflow-wrap: break-word;
 }
 
 .todoTask:focus {
